# bot_mypoison

./: Dockerfile.bot  README.md  docker-compose.yml  pyproject.toml
bootcamp/: requirements.txt
bootcamp/bootcamp/: settings.py  urls.py
bootcamp/telegram_users/: admin.py  models.py  serializers.py  urls.py  views.py
bootcamp/telegram_users/migrations/: 0002_auto_20221125_1053.py  0003_auto_20221125_1142.py  0004_order.py  0005_settings.py  0006_alter_settings_k_yuany.py  0007_alter_settings_id.py  0008_auto_20221202_1012.py  0009_auto_20221202_1041.py
bootcamp/userbot/: models.py  serializers.py
bootcamp/userbot/migrations/: 0024_alter_day_lesson_lesson.py  0025_auto_20221130_1853.py
bot/: bot.py  config.ini  fsm_states_groups.py  pyproject.toml  requirements.txt
bot/handlers/: menu.py  order.py  preorder.py  signup.py  start.py
bot/keyboards/: inline_kb.py  reply_kb.py
bot/messages_data/: message.py
bot/utils/: config.py  db.py  rate.py  settings.py  utils.py
