[tool.poetry]
name = "repl-poison"
version = "1.0"
description = ""
authors = ["IgorOlenchuk"]
readme = "README.md"
packages = [{include = "repl_poison"}]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.0.0b3"
pyaes = "1.6.1"
PySocks = "1.7.1"
TgCrypto = "1.2.4"
lxml = "4.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
